<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="trtcliveroom_dialog_input_text_hint">Send a message</string>
    <string name="trtcliveroom_live_end_tips">Live Stream Ended</string>
    <string name="trtcliveroom_live_time_tips">Duration</string>
    <string name="trtcliveroom_live_members_tips">Viewers</string>
    <string name="trtcliveroom_live_admires_tips">Likes</string>
    <string name="trtcliveroom_btn_return">Back</string>
    <string name="trtcliveroom_tips">Information</string>
    <string name="trtcliveroom_ok">OK</string>
    <string name="trtcliveroom_cancle">Cancel</string>
    <string name="trtcliveroom_accept">Accept</string>
    <string name="trtcliveroom_refuse">Decline</string>
    <string name="trtcliveroom_user_ok">Ok</string>
    <string name="trtcliveroom_user_wait">Cancel</string>
    <string name="trtcliveroom_error">Error</string>
    <string name="trtcliveroom_notification">Notification</string>
    <string name="trtcliveroom_send">Send</string>
    <string name="trtcliveroom_over">End</string>
    <string name="trtcliveroom_loading">Loading…</string>
    <string name="trtcliveroom_no_anchor_for_pk">No anchor</string>
    <string name="trtcliveroom_get_anchor_list_fail">Failed to obtain a list of anchor.</string>
    <string name="trtcliveroom_switch_trtc_mode">Switch to TRTC mode=</string>
    <string name="trtcliveroom_switch_cdn_mode">Switch to CDN mode</string>
    <string name="trtcliveroom_warning_switched_mode">Restart the app for the setting to take effect.</string>
    <string name="trtcliveroom_title_cdn_mode">CDN</string>
    <string name="trtcliveroom_tips_no_room">No content now</string>
    <string name="trtcliveroom_craete_room">New living room</string>
    <string name="trtcliveroom_msg_room_name_edit">Enter a room name</string>
    <string name="trtcliveroom_warning_room_name_empty">Room name cannot be empty</string>
    <string name="trtcliveroom_warning_room_name_too_long">Room name is too long</string>
    <string name="trtcliveroom_warning_not_empty">Can not be empty.</string>
    <string name="trtcliveroom_tap_current_user">Current user: %1$s</string>
    <string name="trtcliveroom_warning_room_disband">Room closed</string>
    <string name="trtcliveroom_warning_kick_out_by_anchor">The anchor declined your request.</string>
    <string name="trtcliveroom_tips_rest">Operation too frequent. Please try again later.</string>
    <string name="trtcliveroom_tips_enter_room_success">Entered room successfully</string>
    <string name="trtcliveroom_tips_enter_room_fail">Failed to enter room:%1$d</string>
    <string name="trtcliveroom_tips_start_camera_audio">Please turn on the camera and microphone permissions first</string>
    <string name="trtcliveroom_wait_anchor_accept">Waiting for anchor to accept…</string>
    <string name="trtcliveroom_request_link_mic_anchor">%1$s requested to co-anchor</string>
    <string name="trtcliveroom_anchor_accept_link_mic">The anchor accepted your request. Co-anchoring starts.</string>
    <string name="trtcliveroom_error_request_link_mic">Request to co-anchor error, %1$s</string>
    <string name="trtcliveroom_fail_link_mic">Failed to start co-anchoring: %1$s</string>
    <string name="trtcliveroom_user_join_live">%1$s joined the live stream</string>
    <string name="trtcliveroom_user_quit_live">%1$s exited the live stream</string>
    <string name="trtcliveroom_user_click_like">%1$s gave a like</string>
    <string name="trtcliveroom_tips_input_content">Enter a message</string>
    <string name="trtcliveroom_me">Me</string>
    <string name="trtcliveroom_message_send_success">Sent successfully</string>
    <string name="trtcliveroom_message_send_fail">Failed to send [%1$d]:%2$s</string>
    <string name="trtcliveroom_text_room_name">Room name</string>
    <string name="trtcliveroom_text_anchor_name">Anchor</string>
    <string name="trtcliveroom_warning_anchor_exit_room">The room will close after you leave. Leave?</string>
    <string name="trtcliveroom_error_create_live_room">Failed to create the room. Error:%1$s</string>
    <string name="trtcliveroom_warning_linking_mic">You are co-anchoring/competing</string>
    <string name="trtcliveroom_tips_accept_link_mic">User %1$s Accept Invitation</string>
    <string name="trtcliveroom_tips_refuse_link_mic">User %1$s Decline Invitation</string>
    <string name="trtcliveroom_request_pk">%1$s requested to compete</string>
    <string name="trtcliveroom_anchor_refuse_pk_request">The anchor declined your request to compete.</string>
    <string name="trtcliveroom_anchor_handling_other_link">The anchor is handling another co-anchoring request. Please wait.</string>
    <string name="trtcliveroom_anchor_handling_other_pk">The anchor is handling another competing request. Please wait.</string>
    <string name="trtcliveroom_tips_quit_pk">onQuitRoomPK</string>
    <string name="trtcliveroom_request_link_mic">%1$s requested to co-anchor</string>
    <string name="trtcliveroom_anchor_refuse_link_request">The anchor declined your request to co-anchor.</string>
    <string name="trtcliveroom_warning_link_user_max_limit">The number of co-anchors has reached the maximum.</string>
    <string name="trtcliveroom_fail_request_permission">Failed to obtain permission</string>
    <string name="trtcliveroom_anchor_offline">The anchor is not online.</string>
    <string name="trtcliveroom_title_pk_request">Invite to Compete</string>
    <string name="trtcliveroom_btn_start_live">Start</string>
    <string name="trtcliveroom_btn_stop_live">End</string>
    <string name="trtcliveroom_text_voice_quality">Sound Quality</string>
    <string name="trtcliveroom_hint_live_room_name">Enter an intriguing name</string>
    <string name="trtcliveroom_voice_quality_standard">Standard</string>
    <string name="trtcliveroom_voice_quality_muisic">Music</string>
    <string name="trtcliveroom_request_network_fail">Network request failed %1$s</string>
    <string name="trtcliveroom_audience_members">%1$d watching</string>
    <string name="trtcliveroom_btn_stop_pk">End Competition</string>
    <string name="trtcliveroom_btn_invite">Invite</string>
    <string name="trtcliveroom_create_room_limit">The cloud communication account you are currently using has not activated the audio and video chat room function, and the number of chat rooms created exceeds the limit, please go to the Tencent Cloud official website to open [IM audio and video chat rooms]：https://cloud.tencent.com/document/product/269/11673</string>
    <string name="trtcliveroom_create_or_join_group_limit">The number of groups that a single user can create and join exceeds the limit, please purchase relevant packages, more details:https://cloud.tencent.com/document/product/269/11673</string>
    <string name="trtcliveroom_group_member_limit">The number of group members exceeds the limit, please refer to it, please purchase the relevant packages, more details:https://cloud.tencent.com/document/product/269/11673</string>
    <string name="trtcliveroom_create_room_default">%s\'s room</string>
    <string name="trtcliveroom_bgm_title">Background music</string>
    <string name="trtcliveroom_back">Back</string>
    <string name="trtcliveroom_sound_effects">Sound effect settings</string>
    <string name="trtcliveroom_sound_audition">Music</string>
    <string name="trtcliveroom_put_on_your_headphones">Use earphones for better experience</string>
    <string name="trtcliveroom_copyright_sounds">Music Library ©</string>
    <string name="trtcliveroom_sounds_adjustment">Music tone</string>
    <string name="trtcliveroom_select_song">Select song</string>
    <string name="trtcliveroom_music_volume">Music volume</string>
    <string name="trtcliveroom_mic_volume">Voice volume</string>
    <string name="trtcliveroom_changer">Voice changing</string>
    <string name="trtcliveroom_reverb">Reverb</string>
    <string name="trtcliveroom_bg_music_positive_happy">Happy</string>
    <string name="trtcliveroom_bg_music_sad_cinematic_piano">Sad Cinematic Piano</string>
    <string name="trtcliveroom_bg_music_wonder_world">Wonder World</string>
    <string name="trtcliveroom_room_id">RoomId:%s</string>
    <string name="trtcliveroom_no_effect">No effect</string>
    <string name="trtcliveroom_audio_change_type_child">Naughty boy</string>
    <string name="trtcliveroom_audio_change_type_luoli">Little girl</string>
    <string name="trtcliveroom_audio_change_type_dashu">Middle-aged man</string>
    <string name="trtcliveroom_audio_change_type_kongling">Ethereal voice</string>
    <string name="trtcliveroom_audio_reverb_type_ktv">Karaoke room</string>
    <string name="trtcliveroom_audio_reverb_type_lowdeep">Deep</string>
    <string name="trtcliveroom_audio_reverb_type_heavymetal">Metallic</string>
    <string name="trtcliveroom_audio_reverb_type_hongliang">Resonant</string>
    <string name="trtcliveroom_tv_enable_audio">Enable Audio</string>
    <string name="trtcliveroom_title_bitrate">Bitrate</string>
    <string name="trtcliveroom_title_resolution">Resolution</string>
    <string name="trtcliveroom_title_frame_rate">Frame Rate</string>
    <string name="trtcliveroom_first_enter_room_tips">In accordance with relevant regulations, the app forbids pornographic, abusive, violent, terrorist, and politically sensitive content. All audio/video calls and live streams are recorded and archived.</string>
    <string name="trtcliveroom_title_video">Video Settings</string>
    <string name="trtcliveroom_link_mic_anchor_timeout">The anchor Timeout Response</string>
    <string name="trtcliveroom_pk_room_id">Room Id:</string>
    <string name="trtcliveroom_input_room_id_hint">Enter a room id</string>
    <string name="trtcliveroom_invite_pk">Invite PK</string>
    <string name="trtcliveroom_tips_start_camera">Please turn on the camera permission first</string>
    <string name="trtcliveroom_tips_start_audio">Please turn on the microphone permission first</string>
    <string name="trtcliveroom_permission_mic_reason_title">%s applies for access to the microphone</string>
    <string name="trtcliveroom_permission_mic_reason">Needs access to your microphone, and it can be used for functions such as Interactive Video Streaming, Show Live, Video Call, Group Video Call, Multi-person audio and video room, etc.</string>
    <string name="trtcliveroom_permission_camera_reason_title">%s applies for camera permission</string>
    <string name="trtcliveroom_permission_camera_reason">Needs access to your camera, and it can be used for functions such as Interactive Video Streaming, Show Live, Video Call, Group Video Call, Multi-person audio and video room, etc. For beauty filters to work, we will collect the facial information captured by your camera in real time to detect your facial features.</string>
    <string name="trtcliveroom_room_not_exist">Room not exist</string>
</resources>
